# thermal-comfort

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml  requirements-dev.in  tox.ini
.github/workflows/: ci.yml  pages.yml  wheels.yml
benchmarks/: benchmark.py  benchmark_pythermalcomfort.py  benchmark_umep.py  umep.py
docs/src/: index.md
src/: _thermal_comfort.f90
src/thermal_comfort/: __init__.py  models.py  mrt.py  utils.py
src/thermal_comfort/_thermal_comfort/: thermal_comfort_mod.pyi
tests/: thermal_comfort_test.py
thermal_comfort/: __init__.py  pet.py  utci.py
