[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "thermal-comfort"
version = "0.0.0"
dependencies = [
    "numpy>=2.0.0"
]
requires-python = ">=3.9"
authors = [
  {name = "Another person"}
]
maintainers = [
  {name = "Another person", email = 'test@example.com'}
]
description = "Functions to calculate thermal comfort indices"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Repository = "https://github.com/RUBclim/thermal-comfort"
Issues = "https://github.com/RUBclim/thermal-comfort/issues"

[tool.coverage.report]
fail_under = 1

[tool.coverage.run]
parallel = true
plugins = ["covdefaults"]

[tool.autopep8]
max_line_length = 88

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = ["testing.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
