[build-system]
requires = ["scikit-build-core", "numpy", "charset-normalizer"]
build-backend = "scikit_build_core.build"

[project]
name = "thermal-comfort"
version = "0.0.0"
dependencies = [
    "numpy>=2.0.0"
]
requires-python = ">=3.9"
authors = [
  {name = "Jonas Kittner"}
]
maintainers = [
  {name = "Jonas Kittner", email = 'jonas.kittner@rub.de'}
]
description = "Functions to calculate thermal comfort indices"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Repository = "https://github.com/RUBclim/thermal-comfort"
Issues = "https://github.com/RUBclim/thermal-comfort/issues"

[tool.scikit-build]
ninja.version = ">=1.10"
cmake.version = ">=3.17.2"
wheel.py-api = "cp39"

[tool.coverage.report]
fail_under = 100

[tool.coverage.run]
parallel = true
plugins = ["covdefaults"]

[tool.autopep8]
max_line_length = 88

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = ["testing.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
